#
#
# Project script for client
#
#
project(server C CXX)

# Platform specific sources 
set(WINDOWS_SRCS		"${ROOT}//public/haptics/haptic_utils.cpp"

)
set(POSIX_SRCS	)
set(SRCS
			"gamedll_replay.cpp"
			"${ROOT_DIR}/common/replay/ireplaysessionrecorder.h"
			#"${ROOT_DIR}/game/shared/replay_gamestats_shared.cpp"	[$BUILD_REPLAY]
			#"${ROOT_DIR}/game/shared/replay_gamestats_shared.h"	[$BUILD_REPLAY]
			"${ROOT_DIR}/game/shared/achievement_saverestore.cpp"
			"${ROOT_DIR}/game/shared/achievement_saverestore.h"
			"${ROOT_DIR}/game/shared/achievementmgr.cpp"
			"${ROOT_DIR}/game/shared/achievementmgr.h"
			"${ROOT_DIR}/game/shared/achievements_hlx.cpp"
			"${ROOT_DIR}/game/shared/activitylist.cpp"
			"${ROOT_DIR}/game/shared/activitylist.h"
			"ai_activity.cpp"
			"${ROOT_DIR}/game/shared/ai_activity.h"
			"ai_baseactor.cpp"
			"ai_baseactor.h"
			"ai_basehumanoid.cpp"
			"ai_basehumanoid.h"
			"ai_basenpc.cpp"
			"ai_basenpc.h"
			"ai_basenpc_flyer.cpp"
			"ai_basenpc_flyer.h"
			"ai_basenpc_flyer_new.cpp"
			"ai_basenpc_flyer_new.h"
			"ai_basenpc_movement.cpp"
			"ai_basenpc_physicsflyer.cpp"
			"ai_basenpc_physicsflyer.h"
			"ai_basenpc_schedule.cpp"
			"ai_basenpc_squad.cpp"
			"ai_behavior.cpp"
			"ai_behavior.h"
			"ai_behavior_assault.cpp"
			"ai_behavior_assault.h"
			"ai_behavior_fear.cpp"
			"ai_behavior_fear.h"
			"ai_behavior_follow.cpp"
			"ai_behavior_follow.h"
			"ai_behavior_lead.cpp"
			"ai_behavior_lead.h"
			"ai_behavior_rappel.cpp"
			"ai_behavior_rappel.h"
			"ai_behavior_standoff.cpp"
			"ai_behavior_standoff.h"
			"ai_blended_movement.cpp"
			"ai_blended_movement.h"
			"ai_component.h"
			"ai_concommands.cpp"
			"ai_condition.cpp"
			"ai_condition.h"
			"AI_Criteria.cpp"
			"AI_Criteria.h"
			"ai_debug.h"
			"${ROOT_DIR}/game/shared/ai_debug_shared.h"
			"ai_default.cpp"
			"ai_default.h"
			"ai_dynamiclink.cpp"
			"ai_dynamiclink.h"
			"ai_event.cpp"
			"ai_goalentity.cpp"
			"ai_goalentity.h"
			"ai_hint.cpp"
			"ai_hint.h"
			"ai_hull.cpp"
			"ai_hull.h"
			"ai_initutils.cpp"
			"ai_initutils.h"
			"AI_Interest_Target.cpp"
			"AI_Interest_Target.h"
			"ai_link.cpp"
			"ai_link.h"
			"ai_localnavigator.cpp"
			"ai_localnavigator.h"
			"ai_looktarget.cpp"
			"ai_looktarget.h"
			"ai_memory.cpp"
			"ai_memory.h"
			"ai_motor.cpp"
			"ai_motor.h"
			"ai_moveprobe.cpp"
			"ai_moveprobe.h"
			"ai_moveshoot.cpp"
			"ai_moveshoot.h"
			"ai_movesolver.cpp"
			"ai_movesolver.h"
			"ai_movetypes.h"
			"ai_namespaces.cpp"
			"ai_namespaces.h"
			"ai_navgoaltype.h"
			"ai_navigator.cpp"
			"ai_navigator.h"
			"ai_navtype.h"
			"ai_network.cpp"
			"ai_network.h"
			"ai_networkmanager.cpp"
			"ai_networkmanager.h"
			"ai_node.cpp"
			"ai_node.h"
			"ai_npcstate.h"
			"ai_obstacle_type.h"
			"ai_pathfinder.cpp"
			"ai_pathfinder.h"
			"ai_planesolver.cpp"
			"ai_planesolver.h"
			"ai_playerally.cpp"
			"ai_playerally.h"
			"AI_ResponseSystem.cpp"
			"AI_ResponseSystem.h"
			"ai_route.cpp"
			"ai_route.h"
			"ai_routedist.h"
			"ai_saverestore.cpp"
			"ai_saverestore.h"
			"ai_schedule.cpp"
			"ai_schedule.h"
			"ai_scriptconditions.cpp"
			"ai_scriptconditions.h"
			"ai_senses.cpp"
			"ai_senses.h"
			"ai_sentence.cpp"
			"ai_sentence.h"
			"ai_speech.cpp"
			"ai_speech.h"
			"ai_speechfilter.cpp"
			"ai_speechfilter.h"
			"ai_squad.cpp"
			"ai_squad.h"
			"ai_squadslot.cpp"
			"ai_squadslot.h"
			"ai_tacticalservices.cpp"
			"ai_tacticalservices.h"
			"ai_task.cpp"
			"ai_task.h"
			"ai_trackpather.cpp"
			"ai_trackpather.h"
			"ai_utils.cpp"
			"ai_utils.h"
			"ai_waypoint.cpp"
			"ai_waypoint.h"
			"${ROOT_DIR}/game/shared/ammodef.cpp"
			"${ROOT_DIR}/game/shared/animation.cpp"
			"${ROOT_DIR}/game/shared/animation.h"
			"${ROOT_DIR}/game/shared/apparent_velocity_helper.h"
			"${ROOT_DIR}/game/shared/base_playeranimstate.cpp"
			"base_transmit_proxy.cpp"
			"${ROOT_DIR}/game/shared/baseachievement.cpp"
			"${ROOT_DIR}/game/shared/baseachievement.h"
			"baseanimating.cpp"
			"baseanimating.h"
			"BaseAnimatingOverlay.cpp"
			"BaseAnimatingOverlay.h"
			"basecombatcharacter.cpp"
			"basecombatcharacter.h"
			"${ROOT_DIR}/game/shared/basecombatcharacter_shared.cpp"
			"basecombatweapon.cpp"
			"basecombatweapon.h"
			"${ROOT_DIR}/game/shared/basecombatweapon_shared.cpp"
			"${ROOT_DIR}/game/shared/basecombatweapon_shared.h"
			"baseentity.cpp"
			"baseentity.h"
			"${ROOT_DIR}/game/shared/baseentity_shared.cpp"
			"${ROOT_DIR}/game/shared/baseentity_shared.h"
			"baseflex.cpp"
			"baseflex.h"
			"${ROOT_DIR}/game/shared/basegrenade_shared.cpp"
			"${ROOT_DIR}/game/shared/basegrenade_shared.h"
			"basemultiplayerplayer.cpp"
			"basemultiplayerplayer.h"
			"${ROOT_DIR}/game/shared/baseparticleentity.cpp"
			"${ROOT_DIR}/game/shared/baseparticleentity.h"
			"${ROOT_DIR}/game/shared/baseplayer_shared.cpp"
			"${ROOT_DIR}/game/shared/baseplayer_shared.h"
			"${ROOT_DIR}/game/shared/baseprojectile.cpp"
			"${ROOT_DIR}/game/shared/baseprojectile.h"
			"BasePropDoor.h"
			"basetoggle.h"
			"baseviewmodel.cpp"
			"baseviewmodel.h"
			"${ROOT_DIR}/game/shared/baseviewmodel_shared.cpp"
			"${ROOT_DIR}/game/shared/baseviewmodel_shared.h"
			"${ROOT_DIR}/game/shared/beam_shared.cpp"
			"${ROOT_DIR}/game/shared/beam_shared.h"
			"bitstring.cpp"
			"bitstring.h"
			"bmodels.cpp"
			"${ROOT_DIR}/public/bone_setup.h"
			"buttons.cpp"
			"buttons.h"
			"cbase.cpp"
			"cbase.h"
			"${ROOT_DIR}/game/shared/choreoactor.h"
			"${ROOT_DIR}/game/shared/choreochannel.h"
			"${ROOT_DIR}/game/shared/choreoevent.h"
			"${ROOT_DIR}/game/shared/choreoscene.h"
			"client.cpp"
			"client.h"
			"${ROOT_DIR}/game/shared/collisionproperty.cpp"
			"${ROOT_DIR}/game/shared/collisionproperty.h"
			"${ROOT_DIR}/public/collisionutils.h"
			"colorcorrection.cpp"
			"colorcorrectionvolume.cpp"
			"CommentarySystem.cpp"
			"controlentities.cpp"
			"cplane.cpp"
			"CRagdollMagnet.cpp"
			"CRagdollMagnet.h"
			"damagemodifier.cpp"
			"${ROOT_DIR}/game/shared/death_pose.cpp"
			"${ROOT_DIR}/game/shared/debugoverlay_shared.cpp"
			"${ROOT_DIR}/game/shared/debugoverlay_shared.h"
			"${ROOT_DIR}/game/shared/decals.cpp"
			"doors.cpp"
			"doors.h"
			"dynamiclight.cpp"
			"${ROOT_DIR}/public/edict.h"
			"${ROOT_DIR}/public/editor_sendcommand.h"
			"${ROOT_DIR}/game/shared/effect_color_tables.h"
			"${ROOT_DIR}/game/shared/effect_dispatch_data.cpp"
			"effects.cpp"
			"effects.h"
			"EffectsServer.cpp"
			"${ROOT_DIR}/game/shared/ehandle.cpp"
			"${ROOT_DIR}/public/eiface.h"
			"enginecallback.h"
			"entityapi.h"
			"entityblocker.cpp"
			"entityblocker.h"
			"EntityDissolve.cpp"
			"EntityDissolve.h"
			"EntityFlame.cpp"
			"entityinput.h"
			"entitylist.cpp"
			"entitylist.h"
			"${ROOT_DIR}/game/shared/entitylist_base.cpp"
			"entityoutput.h"
			"EntityParticleTrail.cpp"
			"EntityParticleTrail.h"
			"${ROOT_DIR}/game/shared/EntityParticleTrail_Shared.cpp"
			"${ROOT_DIR}/game/shared/entityparticletrail_shared.h"
			"env_debughistory.cpp"
			"env_debughistory.h"
			"${ROOT_DIR}/game/shared/env_detail_controller.cpp"
			"env_effectsscript.cpp"
			"env_entity_maker.cpp"
			"env_particlescript.cpp"
			"env_player_surface_trigger.cpp"
			"env_player_surface_trigger.h"
			"env_projectedtexture.cpp"
			"env_screenoverlay.cpp"
			"env_texturetoggle.cpp"
			"env_tonemap_controller.cpp"
			"${ROOT_DIR}/game/shared/env_wind_shared.cpp"
			"${ROOT_DIR}/game/shared/env_wind_shared.h"
			"env_zoom.cpp"
			"env_zoom.h"
			"EnvBeam.cpp"
			"EnvFade.cpp"
			"EnvHudHint.cpp"
			"EnvLaser.cpp"
			"EnvLaser.h"
			"EnvMessage.cpp"
			"EnvMessage.h"
			"envmicrophone.cpp"
			"envmicrophone.h"
			"EnvShake.cpp"
			"EnvSpark.cpp"
			"envspark.h"
			"${ROOT_DIR}/public/event_flags.h"
			"event_tempentity_tester.h"
			"${ROOT_DIR}/game/shared/eventlist.cpp"
			"${ROOT_DIR}/game/shared/eventlist.h"
			"EventLog.cpp"
			"eventqueue.h"
			"explode.cpp"
			"explode.h"
			"filters.cpp"
			"filters.h"
			"fire.cpp"
			"fire.h"
			"fire_smoke.cpp"
			"fire_smoke.h"
			"fish.cpp"
			"fish.h"
			"fogcontroller.cpp"
			"fourwheelvehiclephysics.cpp"
			"fourwheelvehiclephysics.h"
			"func_areaportal.cpp"
			"func_areaportalbase.cpp"
			"func_areaportalbase.h"
			"func_areaportalwindow.cpp"
			"func_areaportalwindow.h"
			"func_break.cpp"
			"func_break.h"
			"func_breakablesurf.cpp"
			"func_breakablesurf.h"
			"func_dust.cpp"
			"${ROOT_DIR}/game/shared/func_dust_shared.h"
			"${ROOT_DIR}/game/shared/func_ladder.cpp"
			"func_ladder_endpoint.cpp"
			"func_lod.cpp"
			"func_movelinear.cpp"
			"func_movelinear.h"
			"func_occluder.cpp"
			"func_reflective_glass.cpp"
			"func_smokevolume.cpp"
			"game.cpp"
			"game.h"
			"game_ui.cpp"
			"gameinterface.cpp"
			"gameinterface.h"
			"${ROOT_DIR}/game/shared/gamemovement.cpp"
			"${ROOT_DIR}/game/shared/gamemovement.h"
			"${ROOT_DIR}/game/shared/gamerules.cpp"
			"${ROOT_DIR}/game/shared/gamerules.h"
			"${ROOT_DIR}/game/shared/gamerules_register.cpp"
			"${ROOT_DIR}/game/shared/GameStats.cpp"
			"${ROOT_DIR}/game/shared/gamestats.h"
			"${ROOT_DIR}/game/shared/gamestringpool.cpp"
			"${ROOT_DIR}/game/shared/gamestringpool.h"
			"gametrace_dll.cpp"
			"${ROOT_DIR}/game/shared/gamevars_shared.cpp"
			"${ROOT_DIR}/game/shared/gamevars_shared.h"
			"gameweaponmanager.cpp"
			"gameweaponmanager.h"
			"genericactor.cpp"
			"genericmonster.cpp"
			"gib.cpp"
			"gib.h"
			"globals.cpp"
			"globalstate.cpp"
			"globalstate.h"
			"globalstate_private.h"
			"guntarget.cpp"
			"h_ai.cpp"
			"hierarchy.cpp"
			"hierarchy.h"
			"${ROOT_DIR}/common/hl2orange.spa.h"
			"hltvdirector.cpp"
			"hltvdirector.h"
			"${ROOT_DIR}/game/shared/hintmessage.cpp"
			"${ROOT_DIR}/game/shared/hintmessage.h"
			"${ROOT_DIR}/game/shared/hintsystem.cpp"
			"${ROOT_DIR}/game/shared/hintsystem.h"
			"${ROOT_DIR}/game/shared/ichoreoeventcallback.h"
			"${ROOT_DIR}/game/shared/igamesystem.cpp"
			"${ROOT_DIR}/game/shared/igamesystem.h"
			"info_camera_link.cpp"
			"info_camera_link.h"
			"info_overlay_accessor.cpp"
			"init_factory.h"
			"intermission.cpp"
			"${ROOT_DIR}/public/interpolatortypes.h"
			"${ROOT_DIR}/game/shared/interval.h"
			"${ROOT_DIR}/public/iregistry.h"
			"${ROOT_DIR}/game/shared/iscenetokenprocessor.h"
			"iservervehicle.h"
			"item_world.cpp"
			"items.h"
			"${ROOT_DIR}/public/ivoiceserver.h"
			"${ROOT_DIR}/public/keyframe/keyframe.h"
			"lightglow.cpp"
			"lights.cpp"
			"lights.h"
			"locksounds.h"
			"logic_measure_movement.cpp"
			"logic_navigation.cpp"
			"logicauto.cpp"
			"logicentities.cpp"
			"logicrelay.cpp"
			"mapentities.cpp"
			"${ROOT_DIR}/game/shared/mapentities_shared.cpp"
			"maprules.cpp"
			"maprules.h"
			"MaterialModifyControl.cpp"
			"${ROOT_DIR}/public/mathlib/mathlib.h"
			"message_entity.cpp"
			"${ROOT_DIR}/public/model_types.h"
			"modelentities.cpp"
			"${ROOT_DIR}/game/shared/ModelSoundsCache.cpp"
			"movehelper_server.cpp"
			"movehelper_server.h"
			"movement.cpp"
			"${ROOT_DIR}/game/shared/movevars_shared.cpp"
			"movie_explosion.h"
			"${ROOT_DIR}/game/shared/multiplay_gamerules.cpp"
			"${ROOT_DIR}/game/shared/multiplay_gamerules.h"
			"ndebugoverlay.cpp"
			"ndebugoverlay.h"
			"networkstringtable_gamedll.h"
			"${ROOT_DIR}/public/networkstringtabledefs.h"
			"npc_vehicledriver.cpp"
			"${ROOT_DIR}/game/shared/obstacle_pushaway.cpp"
			"${ROOT_DIR}/game/shared/obstacle_pushaway.h"
			"particle_fire.h"
			"particle_light.cpp"
			"particle_light.h"
			"${ROOT_DIR}/game/shared/particle_parse.cpp"
			"${ROOT_DIR}/game/shared/particle_parse.h"
			"particle_smokegrenade.h"
			"particle_system.cpp"
			"${ROOT_DIR}/game/shared/particlesystemquery.cpp"
			"pathcorner.cpp"
			"pathtrack.cpp"
			"pathtrack.h"
			"${ROOT_DIR}/public/vphysics/performance.h"
			"phys_controller.cpp"
			"phys_controller.h"
			"physconstraint.cpp"
			"physconstraint.h"
			"physics.cpp"
			"physics.h"
			"physics_bone_follower.cpp"
			"physics_cannister.cpp"
			"physics_collisionevent.h"
			"physics_fx.cpp"
			"physics_impact_damage.cpp"
			"pushentity.h"
			"physics_main.cpp"
			"${ROOT_DIR}/game/shared/physics_main_shared.cpp"
			"physics_npc_solver.cpp"
			"physics_npc_solver.h"
			"physics_prop_ragdoll.cpp"
			"physics_prop_ragdoll.h"
			"${ROOT_DIR}/game/shared/physics_saverestore.cpp"
			"${ROOT_DIR}/game/shared/physics_saverestore.h"
			"${ROOT_DIR}/game/shared/physics_shared.cpp"
			"${ROOT_DIR}/game/shared/physics_shared.h"
			"physobj.cpp"
			"physobj.h"
			"player.cpp"
			"player.h"
			"player_command.cpp"
			"player_command.h"
			"player_lagcompensation.cpp"
			"player_pickup.cpp"
			"player_pickup.h"
			"player_resource.cpp"
			"player_resource.h"
			"playerinfomanager.cpp"
			"playerlocaldata.cpp"
			"playerlocaldata.h"
			"plugin_check.cpp"
			"${ROOT_DIR}/game/shared/point_bonusmaps_accessor.cpp"
			"${ROOT_DIR}/game/shared/point_bonusmaps_accessor.h"
			"point_camera.cpp"
			"point_camera.h"
			"point_devshot_camera.cpp"
			"point_playermoveconstraint.cpp"
			"${ROOT_DIR}/game/shared/point_posecontroller.cpp"
			"${ROOT_DIR}/game/shared/point_posecontroller.h"
			"point_spotlight.cpp"
			"point_template.cpp"
			"point_template.h"
			"pointanglesensor.cpp"
			"PointAngularVelocitySensor.cpp"
			"pointhurt.cpp"
			"pointteleport.cpp"
			"${ROOT_DIR}/public/mathlib/polyhedron.h"
			"${ROOT_DIR}/game/shared/positionwatcher.h"
			"${ROOT_DIR}/game/shared/precache_register.cpp"
			"${ROOT_DIR}/game/shared/precache_register.h"
			"${ROOT_DIR}/game/shared/predictableid.cpp"
			"${ROOT_DIR}/game/shared/predictableid.h"
			"props.cpp"
			"props.h"
			"${ROOT_DIR}/game/shared/props_shared.cpp"
		   "${ROOT_DIR}/game/shared/querycache.cpp"
			"ragdoll_manager.cpp"
			"${ROOT_DIR}/game/shared/ragdoll_shared.cpp"
			"RagdollBoogie.cpp"
			"RagdollBoogie.h"
			"recipientfilter.cpp"
			"recipientfilter.h"
			"rope.cpp"
			"rope.h"
			"${ROOT_DIR}/game/shared/rope_helpers.cpp"
			"${ROOT_DIR}/public/rope_physics.h"
			"${ROOT_DIR}/public/rope_shared.h"
			"${ROOT_DIR}/game/shared/saverestore.cpp"
			"${ROOT_DIR}/game/shared/saverestore.h"
			"${ROOT_DIR}/game/shared/saverestore_bitstring.h"
			"saverestore_gamedll.cpp"
			"${ROOT_DIR}/game/shared/saverestore_utlsymbol.h"
			"${ROOT_DIR}/game/shared/saverestore_utlvector.h"
			"${ROOT_DIR}/game/shared/SceneCache.cpp"
			"sceneentity.cpp"
			"sceneentity.h"
			"${ROOT_DIR}/game/shared/sceneentity_shared.cpp"
			"scratchpad_gamedll_helpers.cpp"
			"scripted.cpp"
			"scripted.h"
			"scriptedtarget.cpp"
			"scriptedtarget.h"
			"${ROOT_DIR}/game/shared/scriptevent.h"
			"sendproxy.cpp"
			"${ROOT_DIR}/game/shared/sequence_Transitioner.cpp"
			"${ROOT_DIR}/game/server/serverbenchmark_base.cpp"
			"${ROOT_DIR}/game/server/serverbenchmark_base.h"
			"${ROOT_DIR}/public/server_class.h"
			"ServerNetworkProperty.cpp"
			"ServerNetworkProperty.h"
			"shadowcontrol.cpp"
			"${ROOT_DIR}/public/shattersurfacetypes.h"
			"${ROOT_DIR}/game/shared/sheetsimulator.h"
			"${ROOT_DIR}/public/simple_physics.h"
			"${ROOT_DIR}/game/shared/simtimer.cpp"
			"${ROOT_DIR}/game/shared/simtimer.h"
			"${ROOT_DIR}/game/shared/singleplay_gamerules.cpp"
			"${ROOT_DIR}/game/shared/singleplay_gamerules.h"
			"SkyCamera.cpp"
			"slideshow_display.cpp"
			"sound.cpp"
			"${ROOT_DIR}/game/shared/SoundEmitterSystem.cpp"
			"soundent.cpp"
			"soundent.h"
			"${ROOT_DIR}/game/shared/soundenvelope.cpp"
			"${ROOT_DIR}/public/SoundParametersInternal.cpp"
			"soundscape.cpp"
			"soundscape.h"
			"soundscape_system.cpp"
			"spark.h"
			"spotlightend.cpp"
			"spotlightend.h"
			"${ROOT_DIR}/game/shared/Sprite.cpp"
			"${ROOT_DIR}/game/shared/Sprite.h"
			"sprite_perfmonitor.cpp"
			"${ROOT_DIR}/game/shared/SpriteTrail.h"
			"${ROOT_DIR}/public/vphysics/stats.h"
			"${ROOT_DIR}/public/steam/steam_api.h"
			"${ROOT_DIR}/public/stringregistry.h"
			"${ROOT_DIR}/game/shared/studio_shared.cpp"
			"subs.cpp"
			"sun.cpp"
			"tactical_mission.cpp"
			"tactical_mission.h"
			"${ROOT_DIR}/game/shared/takedamageinfo.cpp"
			"tanktrain.cpp"
			"team.cpp"
			"team.h"
			"${ROOT_DIR}/game/shared/teamplay_gamerules.cpp"
			"${ROOT_DIR}/game/shared/teamplay_gamerules.h"
			"${ROOT_DIR}/game/shared/tempentity.h"
			"TemplateEntities.cpp"
			"TemplateEntities.h"
			"tempmonster.cpp"
			"monstermaker.cpp"
			"tesla.cpp"
			"${ROOT_DIR}/game/shared/test_ehandle.cpp"
			"test_proxytoggle.cpp"
			"test_stressentities.cpp"
			"testfunctions.cpp"
			"testtraceline.cpp"
			"textstatsmgr.cpp"
			"timedeventmgr.cpp"
			"trains.cpp"
			"trains.h"
			"triggers.cpp"
			"triggers.h"
			"${ROOT_DIR}/game/shared/usercmd.cpp"
			"util.cpp"
			"util.h"
			"${ROOT_DIR}/game/shared/util_shared.cpp"
			"variant_t.cpp"
			"vehicle_base.cpp"
			"vehicle_baseserver.cpp"
			"vehicle_sounds.h"
			"${ROOT_DIR}/game/shared/vehicle_viewblend_shared.cpp"
			"vguiscreen.cpp"
			"vguiscreen.h"
			"${ROOT_DIR}/public/mathlib/vmatrix.h"
			"${ROOT_DIR}/game/shared/voice_common.h"
			"${ROOT_DIR}/game/shared/voice_gamemgr.cpp"
			"${ROOT_DIR}/game/shared/voice_gamemgr.h"
			"waterbullet.cpp"
			"waterbullet.h"
			"WaterLODControl.cpp"
			"wcedit.cpp"
			"wcedit.h"
			"${ROOT_DIR}/game/shared/weapon_parse.cpp"
			"${ROOT_DIR}/game/shared/weapon_parse.h"
			"${ROOT_DIR}/game/shared/weapon_proficiency.cpp"
			"${ROOT_DIR}/game/shared/weapon_proficiency.h"
			"weight_button.cpp"
			"world.cpp"
			"world.h"
			"${ROOT_DIR}/game/shared/mp_shareddefs.cpp"
			"${ROOT_DIR}/game/shared/SharedFunctorUtils.h"
			"${ROOT_DIR}/game/server/vote_controller.h"
			"${ROOT_DIR}/game/server/vote_controller.cpp"
			"${ROOT_DIR}/public/haptics/haptic_msgs.cpp"
			"${ROOT_DIR}/public/bone_setup.cpp"					
				"${ROOT_DIR}/public/collisionutils.cpp"					
				"${ROOT_DIR}/public/dt_send.cpp"						
				"${ROOT_DIR}/public/dt_utlvector_common.cpp"			
				"${ROOT_DIR}/public/dt_utlvector_send.cpp"				
				"${ROOT_DIR}/public/editor_sendcommand.cpp"				
				"${ROOT_DIR}/public/filesystem_helpers.cpp"				
				"gamehandle.cpp"									
				"h_export.cpp"										
				"init_factory.cpp"									
				"${ROOT_DIR}/public/interpolatortypes.cpp"				
				"${ROOT_DIR}/game/shared/interval.cpp"					
				"${ROOT_DIR}/public/keyframe/keyframe.cpp"				
				"${ROOT_DIR}/common/language.cpp"						
				"${ROOT_DIR}/public/map_utils.cpp"						
				"${ROOT_DIR}/public/networkvar.cpp"						
				"${ROOT_DIR}/common/randoverride.cpp"					
				"${ROOT_DIR}/public/registry.cpp"						
				"${ROOT_DIR}/public/rope_physics.cpp"					
				"${ROOT_DIR}/public/scratchpad3d.cpp"					
				"${ROOT_DIR}/public/ScratchPadUtils.cpp"				
				"${ROOT_DIR}/public/server_class.cpp"					
				"${ROOT_DIR}/game/shared/sheetsimulator.cpp"			
				"${ROOT_DIR}/public/simple_physics.cpp"					
				"${ROOT_DIR}/public/stringregistry.cpp"					
				"${ROOT_DIR}/public/studio.cpp"							
				"GameStats_BasicStatsFunctions.cpp"
				"stdafx.cpp"
				"basetempentity.cpp"
				"event_tempentity_tester.cpp"
				"movie_explosion.cpp"
				"particle_fire.cpp"
				"particle_smokegrenade.cpp"
				"plasma.cpp"
				"plasma.h"
				"smoke_trail.h"
				"smokestack.cpp"
				"smokestack.h"
				"smoke_trail.cpp"
				"${ROOT_DIR}/game/shared/SpriteTrail.cpp"
				"steamjet.cpp"
				"steamjet.h"
				"te.cpp"
				"te.h"
				"te_armorricochet.cpp"
				"te_basebeam.cpp"
				"te_basebeam.h"
				"te_beamentpoint.cpp"
				"te_beaments.cpp"
				"te_beamfollow.cpp"
				"te_beamlaser.cpp"
				"te_beampoints.cpp"
				"te_beamring.cpp"
				"te_beamringpoint.cpp"
				"te_beamspline.cpp"
				"te_bloodsprite.cpp"
				"te_bloodstream.cpp"
				"te_breakmodel.cpp"
				"te_bspdecal.cpp"
				"te_bubbles.cpp"
				"te_bubbletrail.cpp"
				"te_clientprojectile.cpp"
				"te_decal.cpp"
				"te_dynamiclight.cpp"
				"te_effect_dispatch.cpp"
				"te_energysplash.cpp"
				"te_explosion.cpp"
				"te_fizz.cpp"
				"te_footprintdecal.cpp"
				"hl2/te_gaussexplosion.cpp"
				"te_glassshatter.cpp"
				"te_glowsprite.cpp"
				"te_impact.cpp"
				"te_killplayerattachments.cpp"
				"te_largefunnel.cpp"
				"te_muzzleflash.cpp"
				"te_particlesystem.cpp"
				"te_particlesystem.h"
				"te_physicsprop.cpp"
				"te_playerdecal.cpp"
				"te_projecteddecal.cpp"
				"te_showline.cpp"
				"te_smoke.cpp"
				"te_sparks.cpp"
				"te_sprite.cpp"
				"te_spritespray.cpp"
				"te_worlddecal.cpp"
				"${ROOT_DIR}/game/shared/usermessages.cpp"
			"${ROOT_DIR}/public/mathlib/amd3dx.h"
			"${ROOT_DIR}/game/shared/ammodef.h"
			"${ROOT_DIR}/game/shared/base_playeranimstate.h"
			"base_transmit_proxy.h"
			"${ROOT_DIR}/public/basehandle.h"
			"basetempentity.h"
			"${ROOT_DIR}/public/tier0/basetypes.h"
			"${ROOT_DIR}/game/shared/beam_flags.h"
			"${ROOT_DIR}/public/tier1/bitbuf.h"
			"${ROOT_DIR}/public/bitvec.h"
			"${ROOT_DIR}/public/bone_accessor.h"
			"${ROOT_DIR}/public/bspfile.h"
			"${ROOT_DIR}/public/bspflags.h"
			"${ROOT_DIR}/public/mathlib/bumpvects.h"
			"${ROOT_DIR}/public/tier1/characterset.h"
			"${ROOT_DIR}/public/tier1/checksum_md5.h"
			"${ROOT_DIR}/public/client_class.h"
			"${ROOT_DIR}/public/client_textmessage.h"
			"${ROOT_DIR}/public/cmodel.h"
			"${ROOT_DIR}/public/vphysics/collision_set.h"
			"${ROOT_DIR}/public/Color.h"
			"${ROOT_DIR}/public/tier0/commonmacros.h"
			"${ROOT_DIR}/public/mathlib/compressed_light_cube.h"
			"${ROOT_DIR}/public/mathlib/compressed_vector.h"
			"${ROOT_DIR}/public/const.h"
			"${ROOT_DIR}/public/vphysics/constraints.h"
			"${ROOT_DIR}/public/coordsize.h"
			"cplane.h"
			"damagemodifier.h"
			"${ROOT_DIR}/public/datamap.h"
			"${ROOT_DIR}/public/tier0/dbg.h"
			"${ROOT_DIR}/game/shared/death_pose.h"
			"${ROOT_DIR}/game/shared/decals.h"
			"${ROOT_DIR}/public/dlight.h"
			"${ROOT_DIR}/public/dt_common.h"
			"${ROOT_DIR}/public/dt_recv.h"
			"${ROOT_DIR}/public/dt_send.h"
			"${ROOT_DIR}/public/dt_utlvector_common.h"
			"${ROOT_DIR}/public/dt_utlvector_send.h"
			"${ROOT_DIR}/game/shared/effect_dispatch_data.h"
			"${ROOT_DIR}/game/shared/ehandle.h"
			"${ROOT_DIR}/game/shared/entitydatainstantiator.h"
			"${ROOT_DIR}/game/shared/entitylist_base.h"
			"${ROOT_DIR}/game/shared/env_detail_controller.h"
			"EventLog.h"
			"${ROOT_DIR}/game/shared/expressionsample.h"
			"${ROOT_DIR}/public/tier0/fasttimer.h"
			"${ROOT_DIR}/public/filesystem.h"
			"${ROOT_DIR}/public/filesystem_helpers.h"
			"${ROOT_DIR}/public/tier1/fmtstr.h"
			"fogcontroller.h"
			"${ROOT_DIR}/public/vphysics/friction.h"
			"${ROOT_DIR}/game/shared/func_ladder.h"
			"${ROOT_DIR}/game/shared/gameeventdefs.h"
			"${ROOT_DIR}/game/shared/GameEventListener.h"
			"${ROOT_DIR}/game/shared/gamerules_register.h"
			"${ROOT_DIR}/public/gametrace.h"
			"globals.h"
			"${ROOT_DIR}/public/globalvars_base.h"
			"${ROOT_DIR}/game/shared/groundlink.h"
			"${ROOT_DIR}/game/shared/hl2/hl2_vehicle_radar.h"
			"${ROOT_DIR}/public/iachievementmgr.h"
			"${ROOT_DIR}/public/appframework/IAppSystem.h"
			"${ROOT_DIR}/public/icliententity.h"
			"${ROOT_DIR}/public/iclientnetworkable.h"
			"${ROOT_DIR}/public/iclientrenderable.h"
			"${ROOT_DIR}/public/iclientunknown.h"
			"${ROOT_DIR}/public/engine/ICollideable.h"
			"${ROOT_DIR}/public/tier0/icommandline.h"
			"${ROOT_DIR}/public/icvar.h"
			"${ROOT_DIR}/game/shared/IEffects.h"
			"${ROOT_DIR}/public/engine/IEngineSound.h"
			"${ROOT_DIR}/public/engine/IEngineTrace.h"
			"${ROOT_DIR}/public/igameevents.h"
			"${ROOT_DIR}/game/shared/igamemovement.h"
			"${ROOT_DIR}/public/ihandleentity.h"
			"${ROOT_DIR}/public/ihltv.h"
			"${ROOT_DIR}/public/ihltvdirector.h"
			"${ROOT_DIR}/public/vstdlib/IKeyValuesSystem.h"
			"ilagcompensationmanager.h"
			"${ROOT_DIR}/public/vgui/ILocalize.h"
			"${ROOT_DIR}/public/materialsystem/imaterial.h"
			"${ROOT_DIR}/public/materialsystem/imaterialsystem.h"
			"${ROOT_DIR}/public/materialsystem/imaterialvar.h"
			"${ROOT_DIR}/game/shared/imovehelper.h"
			"${ROOT_DIR}/game/shared/in_buttons.h"
			"${ROOT_DIR}/public/inetchannelinfo.h"
			"${ROOT_DIR}/game/shared/iplayeranimstate.h"
			"${ROOT_DIR}/game/shared/ipredictionsystem.h"
			"${ROOT_DIR}/public/irecipientfilter.h"
			"${ROOT_DIR}/public/isaverestore.h"
			"${ROOT_DIR}/public/iscratchpad3d.h"
			"${ROOT_DIR}/public/iserverentity.h"
			"${ROOT_DIR}/public/iservernetworkable.h"
			"${ROOT_DIR}/public/iserverunknown.h"
			"${ROOT_DIR}/public/SoundEmitterSystem/isoundemittersystembase.h"
			"${ROOT_DIR}/public/ispatialpartition.h"
			"${ROOT_DIR}/public/engine/IStaticPropMgr.h"
			"${ROOT_DIR}/game/shared/itempents.h"
			"${ROOT_DIR}/public/engine/ivdebugoverlay.h"
			"${ROOT_DIR}/game/shared/IVehicle.h"
			"${ROOT_DIR}/public/engine/ivmodelinfo.h"
			"${ROOT_DIR}/public/tier1/KeyValues.h"
			"${ROOT_DIR}/common/language.h"
			"${ROOT_DIR}/public/tier0/l2cache.h"
			"logicrelay.h"
			"${ROOT_DIR}/public/map_utils.h"
			"mapentities.h"
			"${ROOT_DIR}/game/shared/mapentities_shared.h"
			"${ROOT_DIR}/public/tier0/mem.h"
			"${ROOT_DIR}/public/tier0/memalloc.h"
			"${ROOT_DIR}/public/tier0/memdbgoff.h"
			"${ROOT_DIR}/public/tier0/memdbgon.h"
			"modelentities.h"
			"${ROOT_DIR}/game/shared/movevars_shared.h"
			"${ROOT_DIR}/public/networkvar.h"
			"npc_vehicledriver.h"
			"${ROOT_DIR}/game/shared/npcevent.h"
			"${ROOT_DIR}/public/vphysics/object_hash.h"
			"particle_system.h"
			"physics_cannister.h"
			"physics_fx.h"
			"physics_impact_damage.h"
			"${ROOT_DIR}/public/tier0/platform.h"
			"${ROOT_DIR}/public/vphysics/player_controller.h"
			"playerinfomanager.h"
			"${ROOT_DIR}/game/shared/playernet_vars.h"
			"${ROOT_DIR}/public/PlayerState.h"
			"${ROOT_DIR}/game/shared/precipitation_shared.h"
			"${ROOT_DIR}/game/shared/predictable_entity.h"
			"${ROOT_DIR}/game/shared/predictioncopy.h"
			"${ROOT_DIR}/public/tier1/processor_detect.h"
			"${ROOT_DIR}/game/shared/querycache.h"
			"${ROOT_DIR}/game/shared/props_shared.h"
			"${ROOT_DIR}/public/tier0/protected_things.h"
			"${ROOT_DIR}/public/vstdlib/random.h"
			"${ROOT_DIR}/game/shared/rope_helpers.h"
			"${ROOT_DIR}/game/shared/saverestore_stringtable.h"
			"${ROOT_DIR}/game/shared/saverestore_utlclass.h"
			"${ROOT_DIR}/game/shared/saverestore_utlmap.h"
			"${ROOT_DIR}/game/shared/saverestore_utlrbtree.h"
			"${ROOT_DIR}/public/saverestoretypes.h"
			"${ROOT_DIR}/public/scratchpad3d.h"
			"scratchpad_gamedll_helpers.h"
			"${ROOT_DIR}/public/ScratchPadUtils.h"
			"sendproxy.h"
			"${ROOT_DIR}/public/shake.h"
			"${ROOT_DIR}/game/shared/shared_classnames.h"
			"${ROOT_DIR}/game/shared/shareddefs.h"
			"${ROOT_DIR}/game/shared/sharedInterface.h"
			"${ROOT_DIR}/game/shared/shot_manipulator.h"
			"SkyCamera.h"
			"${ROOT_DIR}/public/soundchars.h"
			"${ROOT_DIR}/game/shared/soundenvelope.h"
			"${ROOT_DIR}/public/soundflags.h"
			"soundscape_system.h"
			"${ROOT_DIR}/public/stdstring.h"
			"${ROOT_DIR}/public/string_t.h"
			"${ROOT_DIR}/public/tier1/stringpool.h"
			"${ROOT_DIR}/public/tier1/strtools.h"
			"${ROOT_DIR}/public/studio.h"
			"${ROOT_DIR}/game/shared/sun_shared.h"
			"${ROOT_DIR}/game/shared/takedamageinfo.h"
			"te_effect_dispatch.h"
			"tesla.h"
			"test_stressentities.h"
			"textstatsmgr.h"
			"${ROOT_DIR}/public/texture_group_names.h"
			"timedeventmgr.h"
			"${ROOT_DIR}/game/shared/usercmd.h"
			"${ROOT_DIR}/game/shared/usermessages.h"
			"${ROOT_DIR}/game/shared/util_shared.h"
			"${ROOT_DIR}/public/UtlCachedFileData.h"
			"${ROOT_DIR}/public/tier1/utldict.h"
			"${ROOT_DIR}/public/tier1/utlfixedmemory.h"
			"${ROOT_DIR}/public/tier1/utlhash.h"
			"${ROOT_DIR}/public/tier1/utllinkedlist.h"
			"${ROOT_DIR}/public/tier1/utlmap.h"
			"${ROOT_DIR}/public/tier1/utlmemory.h"
			"${ROOT_DIR}/public/tier1/utlmultilist.h"
			"${ROOT_DIR}/public/tier1/utlpriorityqueue.h"
			"${ROOT_DIR}/public/tier1/utlrbtree.h"
			"${ROOT_DIR}/public/tier1/UtlSortVector.h"
			"${ROOT_DIR}/public/tier1/utlvector.h"
			"${ROOT_DIR}/public/vallocator.h"
			"variant_t.h"
			"${ROOT_DIR}/public/vcollide.h"
			"${ROOT_DIR}/public/vcollide_parse.h"
			"${ROOT_DIR}/public/tier0/vcr_shared.h"
			"${ROOT_DIR}/public/tier0/vcrmode.h"
			"${ROOT_DIR}/public/mathlib/vector.h"
			"${ROOT_DIR}/public/mathlib/vector2d.h"
			"${ROOT_DIR}/public/mathlib/vector4d.h"
			"vehicle_base.h"
			"vehicle_baseserver.h"
			"${ROOT_DIR}/game/shared/vehicle_viewblend_shared.h"
			"${ROOT_DIR}/public/vphysics/vehicles.h"
			"${ROOT_DIR}/public/vgui/VGUI.h"
			"${ROOT_DIR}/public/vphysics_interface.h"
			"${ROOT_DIR}/game/shared/vphysics_sound.h"
			"${ROOT_DIR}/public/mathlib/vplane.h"
			"${ROOT_DIR}/public/tier0/vprof.h"
			"${ROOT_DIR}/public/vstdlib/vstdlib.h"
			"${ROOT_DIR}/public/winlite.h"
			"${ROOT_DIR}/public/worldsize.h"
			"${ROOT_DIR}/public/zip_uncompressed.h"
			"${ROOT_DIR}/game/shared/mp_shareddefs.h"
			"${ROOT_DIR}/game/shared/econ/ihasowner.h"
			"entity_tools_server.cpp"
			"toolframework_server.cpp"
			"toolframework_server.h"
		hl2/vehicle_jeep.cpp
		hl2/vehicle_cannon.cpp
		hl2/vehicle_crane.cpp
	hl2/ai_allymanager.cpp
    hl2/ai_behavior_actbusy.cpp 
    hl2/ai_behavior_functank.cpp 
    hl2/ai_behavior_holster.cpp 
    hl2/ai_behavior_police.cpp 
    hl2/ai_goal_police.cpp 
    hl2/ai_spotlight.cpp 
    hl2/antlion_dust.cpp
    hl2/antlion_maker.cpp 
    hl2/ar2_explosion.cpp 
    hl2/basehlcombatweapon.cpp 
    hl2/cbasehelicopter.cpp 
    hl2/cbasespriteprojectile.cpp 
    hl2/citadel_effects.cpp 
    hl2/combine_mine.cpp 
    hl2/env_alyxemp.cpp 
    hl2/env_headcrabcanister.cpp 
    hl2/env_speaker.cpp 
    hl2/env_starfield.cpp 
    hl2/Func_Monitor.cpp 
    hl2/func_recharge.cpp 
    hl2/func_tank.cpp 
    hl2/grenade_ar2.cpp 
    hl2/grenade_beam.cpp
    hl2/grenade_bugbait.cpp 
    hl2/grenade_frag.cpp 
    hl2/grenade_homer.cpp 
    hl2/grenade_pathfollower.cpp 
    hl2/hl2_ai_network.cpp 
    hl2/hl2_eventlog.cpp 
    hl2/hl2_player.cpp 
    hl2/hl2_playerlocaldata.cpp 
    hl2/hl2_triggers.cpp 
    hl2/hl_playermove.cpp
    hl2/info_teleporter_countdown.cpp 
    hl2/item_ammo.cpp 
    hl2/item_battery.cpp 
    hl2/item_dynamic_resupply.cpp 
    hl2/item_healthkit.cpp 
    hl2/item_itemcrate.cpp 
    hl2/item_suit.cpp 
    hl2/look_door.cpp 
    hl2/monster_dummy.cpp 
    hl2/npc_alyx.cpp 
    hl2/npc_antlion.cpp 
    hl2/npc_antlionguard.cpp 
    hl2/npc_apcdriver.cpp 
    hl2/npc_attackchopper.cpp 
    hl2/npc_barnacle.cpp 
    hl2/npc_barney.cpp 
    hl2/npc_basescanner.cpp 
    hl2/npc_BaseZombie.cpp 
    hl2/npc_breen.cpp 
    hl2/npc_bullseye.cpp 
    hl2/npc_citizen17.cpp 
    hl2/npc_combine.cpp 
    hl2/npc_combinecamera.cpp 
    hl2/npc_combinedropship.cpp 
    hl2/npc_combinegunship.cpp 
    hl2/npc_combines.cpp 
    hl2/npc_cranedriver.cpp 
    hl2/npc_crow.cpp 
    hl2/npc_dog.cpp 
    hl2/npc_eli.cpp 
    hl2/npc_enemyfinder.cpp 
    hl2/npc_fisherman.cpp 
    hl2/npc_gman.cpp 
    hl2/npc_headcrab.cpp 
    hl2/npc_ichthyosaur.cpp 
    hl2/npc_kleiner.cpp 
    hl2/npc_launcher.cpp 
    hl2/npc_manhack.cpp 
    hl2/npc_metropolice.cpp 
    hl2/npc_missiledefense.cpp 
    hl2/npc_monk.cpp 
    hl2/npc_mossman.cpp 
    hl2/npc_playercompanion.cpp 
    hl2/npc_PoisonZombie.cpp 
    hl2/npc_rollermine.cpp 
    hl2/npc_scanner.cpp 
    hl2/npc_stalker.cpp 
    hl2/npc_strider.cpp 
    hl2/npc_turret_ceiling.cpp 
    hl2/npc_turret_floor.cpp 
    hl2/npc_turret_ground.cpp 
    hl2/npc_vortigaunt_episodic.cpp 
    hl2/npc_zombie.cpp 
    hl2/point_apc_controller.cpp 
    hl2/prop_combine_ball.cpp 
    hl2/prop_thumper.cpp 
    hl2/proto_sniper.cpp 
    hl2/rotorwash.cpp 
    hl2/script_intro.cpp 
    hl2/te_gaussexplosion.cpp 
    hl2/vehicle_airboat.cpp 
    hl2/vehicle_apc.cpp 
    hl2/vehicle_prisoner_pod.cpp
    hl2/vehicle_viewcontroller.cpp 
    hl2/weapon_annabelle.cpp 
    hl2/weapon_bugbait.cpp 
    hl2/weapon_cguard.cpp 
    hl2/weapon_flaregun.cpp 
    hl2mp/grenade_satchel.cpp 
    hl2mp/grenade_tripmine.cpp 
    hl2mp/hl2mp_bot_temp.cpp 
    hl2mp/hl2mp_client.cpp 
    hl2mp/hl2mp_cvars.cpp 
    hl2mp/hl2mp_gameinterface.cpp 
    hl2mp/hl2mp_player.cpp 
    hl2mp/te_hl2mp_shotgun_shot.cpp 
    hltvdirector.cpp 
    ${ROOT}/game/shared/achievementmgr.cpp 
    ${ROOT}/game/shared/achievements_hlx.cpp 
    ${ROOT}/game/shared/achievement_saverestore.cpp 
    ${ROOT}/game/shared/activitylist.cpp 
    ${ROOT}/game/shared/ammodef.cpp 
    ${ROOT}/game/shared/animation.cpp 
    ${ROOT}/game/shared/baseachievement.cpp 
    ${ROOT}/game/shared/basecombatcharacter_shared.cpp 
    ${ROOT}/game/shared/basecombatweapon_shared.cpp 
    ${ROOT}/game/shared/baseentity_shared.cpp 
    ${ROOT}/game/shared/basegrenade_shared.cpp 
    ${ROOT}/game/shared/baseparticleentity.cpp 
    ${ROOT}/game/shared/baseplayer_shared.cpp 
    ${ROOT}/game/shared/baseprojectile.cpp 
    ${ROOT}/game/shared/baseviewmodel_shared.cpp 
    ${ROOT}/game/shared/base_playeranimstate.cpp 
    ${ROOT}/game/shared/beam_shared.cpp 
    ${ROOT}/game/shared/collisionproperty.cpp 
    ${ROOT}/game/shared/death_pose.cpp 
    ${ROOT}/game/shared/debugoverlay_shared.cpp 
    ${ROOT}/game/shared/decals.cpp 
    ${ROOT}/game/shared/effect_dispatch_data.cpp 
    ${ROOT}/game/shared/ehandle.cpp 
    ${ROOT}/game/shared/entitylist_base.cpp 
    ${ROOT}/game/shared/EntityParticleTrail_Shared.cpp 
    ${ROOT}/game/shared/env_detail_controller.cpp 
    ${ROOT}/game/shared/env_wind_shared.cpp 
    ${ROOT}/game/shared/eventlist.cpp 
    ${ROOT}/game/shared/func_ladder.cpp 
    ${ROOT}/game/shared/gamemovement.cpp 
    ${ROOT}/game/shared/gamerules.cpp 
    ${ROOT}/game/shared/gamerules_register.cpp 
    ${ROOT}/game/shared/GameStats.cpp 
    ${ROOT}/game/shared/gamestringpool.cpp 
    ${ROOT}/game/shared/gamevars_shared.cpp 
    ${ROOT}/game/shared/hintmessage.cpp 
    ${ROOT}/game/shared/hintsystem.cpp 
    ${ROOT}/game/shared/hl2/basehlcombatweapon_shared.cpp 
    ${ROOT}/game/shared/hl2/env_headcrabcanister_shared.cpp 
    ${ROOT}/game/shared/hl2/hl2_gamerules.cpp 
    ${ROOT}/game/shared/hl2/hl2_usermessages.cpp 
    ${ROOT}/game/shared/hl2/hl_gamemovement.cpp 
    ${ROOT}/game/shared/hl2/survival_gamerules.cpp 
    ${ROOT}/game/shared/hl2mp/hl2mp_gamerules.cpp 
    ${ROOT}/game/shared/hl2mp/hl2mp_player_shared.cpp 
    ${ROOT}/game/shared/hl2mp/hl2mp_weapon_parse.cpp 
    ${ROOT}/game/shared/hl2mp/weapon_357.cpp 
    ${ROOT}/game/shared/hl2mp/weapon_ar2.cpp 
    ${ROOT}/game/shared/hl2mp/weapon_crossbow.cpp 
    ${ROOT}/game/shared/hl2mp/weapon_crowbar.cpp 
    ${ROOT}/game/shared/hl2mp/weapon_frag.cpp 
    ${ROOT}/game/shared/hl2mp/weapon_hl2mpbase.cpp 
    ${ROOT}/game/shared/hl2mp/weapon_hl2mpbasebasebludgeon.cpp 
    ${ROOT}/game/shared/hl2mp/weapon_hl2mpbasehlmpcombatweapon.cpp 
    ${ROOT}/game/shared/hl2mp/weapon_hl2mpbase_machinegun.cpp 
    ${ROOT}/game/shared/hl2mp/weapon_physcannon.cpp 
    ${ROOT}/game/shared/hl2mp/weapon_pistol.cpp 
    ${ROOT}/game/shared/hl2mp/weapon_rpg.cpp 
    ${ROOT}/game/shared/hl2mp/weapon_shotgun.cpp 
    ${ROOT}/game/shared/hl2mp/weapon_slam.cpp 
    ${ROOT}/game/shared/hl2mp/weapon_smg1.cpp 
    ${ROOT}/game/shared/hl2mp/weapon_stunstick.cpp 
    ${ROOT}/game/shared/igamesystem.cpp 
    ${ROOT}/game/shared/interval.cpp 
    ${ROOT}/game/shared/mapentities_shared.cpp 
    ${ROOT}/game/shared/ModelSoundsCache.cpp 
    ${ROOT}/game/shared/movevars_shared.cpp 
    ${ROOT}/game/shared/mp_shareddefs.cpp 
    ${ROOT}/game/shared/multiplay_gamerules.cpp 
    ${ROOT}/game/shared/obstacle_pushaway.cpp 
    ${ROOT}/game/shared/particlesystemquery.cpp 
    ${ROOT}/game/shared/particle_parse.cpp 
    ${ROOT}/game/shared/physics_main_shared.cpp 
    ${ROOT}/game/shared/physics_saverestore.cpp 
    ${ROOT}/game/shared/physics_shared.cpp 
    ${ROOT}/game/shared/point_bonusmaps_accessor.cpp 
    ${ROOT}/game/shared/point_posecontroller.cpp 
    ${ROOT}/game/shared/precache_register.cpp 
    ${ROOT}/game/shared/predictableid.cpp 
    ${ROOT}/game/shared/predicted_viewmodel.cpp 
    ${ROOT}/game/shared/props_shared.cpp 
    ${ROOT}/game/shared/querycache.cpp 
    ${ROOT}/game/shared/ragdoll_shared.cpp 
    ${ROOT}/game/shared/rope_helpers.cpp 
    ${ROOT}/game/shared/saverestore.cpp 
    ${ROOT}/game/shared/SceneCache.cpp 
    ${ROOT}/game/shared/sceneentity_shared.cpp 
    ${ROOT}/game/shared/script_intro_shared.cpp 
    ${ROOT}/game/shared/sequence_Transitioner.cpp 
    ${ROOT}/game/shared/sheetsimulator.cpp 
    ${ROOT}/game/shared/simtimer.cpp 
    ${ROOT}/game/shared/singleplay_gamerules.cpp 
    ${ROOT}/game/shared/SoundEmitterSystem.cpp 
    ${ROOT}/game/shared/soundenvelope.cpp 
    ${ROOT}/game/shared/Sprite.cpp 
    ${ROOT}/game/shared/SpriteTrail.cpp 
    ${ROOT}/game/shared/studio_shared.cpp 
    ${ROOT}/game/shared/takedamageinfo.cpp 
    ${ROOT}/game/shared/teamplayroundbased_gamerules.cpp 
    ${ROOT}/game/shared/teamplay_gamerules.cpp 
    ${ROOT}/game/shared/teamplay_round_timer.cpp 
    ${ROOT}/game/shared/test_ehandle.cpp 
    ${ROOT}/game/shared/usercmd.cpp 
    ${ROOT}/game/shared/usermessages.cpp 
    ${ROOT}/game/shared/util_shared.cpp 
    ${ROOT}/game/shared/vehicle_viewblend_shared.cpp 
    ${ROOT}/game/shared/voice_gamemgr.cpp 
    ${ROOT}/game/shared/weapon_parse.cpp 
    ${ROOT}/game/shared/weapon_proficiency.cpp 
    nav_mesh_factory.cpp
    team_train_watcher.cpp
    nav_mesh.cpp
    nav_node.cpp
    nav_area.cpp
    nav_colors.cpp
    nav_edit.cpp
    nav_entities.cpp
    nav_file.cpp
    nav_generate.cpp
    nav_ladder.cpp
    nav_merge.cpp
    nav_simplify.cpp
    team_control_point_master.cpp
    team_control_point_round.cpp
    team_objectiveresource.cpp
    team_spawnpoint.cpp
    team_control_point.cpp
    trigger_area_capture.cpp
    #trigger_portal.cpp # WE dont need this?
    
)

# Preprocessor defs
set(DEFINES	-DGAME_DLL 
	-DVECTOR 
	-DVERSION_SAFE_STEAM_API_INTERFACES 
	-DHL2_DLL 
	-DHL2MP
	-DPROJECTDIR=${CMAKE_CURRENT_SOURCE_DIR}
	-DVPCGAMECAPS=HL2MP
	-DUSE_NAV_MESH
	)

# Platform-specific preprocessor defines
set(WIN32_DEFINES	)	
set(POSIX32_DEFINES	)
set(WIN64_DEFINES	)
set(POSIX64_DEFINES	)
set(WINDOWS_DEFINES	-Dfopen=dont_use_fopen)
set(POSIX_DEFINES	-DSWDS)

set(PLATFORM_64BIT_DEFINES	)
set(PLATFORM_32BIT_DEFINES 	)

# Links dirs to search for link libs in
set(LINK_DIRS 			)
set(WINDOWS_LINK_DIRS	)
set(POSIX_LINK_DIRS		${PUBLIC_LIB}/linux32/ ${COMMON_LIB}/linux32/)
set(WIN32_LINK_DIRS		)
set(WIN64_LINK_DIRS		)
set(POSIX32_LINK_DIRS	)
set(POSIX64_LINK_DIRS	)


# Generic include dirs
set(INCLUDE_DIRS		${PUBLIC_INCLUDE}/tier1 ${PUBLIC_INCLUDE}/tier0 ${ROOT}//game/shared/hl2 ${ROOT}//game/shared/hl2 ${ROOT}//game/server/hl2 ${ROOT}//game/server/hl2mp
	${SRCDIR}/game/shared/hl2mp ${SRCDIR}/game/shared ${SRCDIR}/utils/common ${SRCDIR}/game/shared/econ ${SRCDIR}/game/server/NextBot ${SRCDIR}/game/server)

# Other projects this depends on
set(DEPENDENCIES mathlib tier1 )

# Platform specific includes
set(WIN32_INCLUDE_DIRS	)
set(WIN64_INCLUDE_DIRS	)
set(POSIX32_INCLUDE_DIRS	)
set(POSIX64_INCLUDE_DIRS	)

# Set the variable of target for stuff
set(TARGET server )

# Set the output file name
set(OUTPUT_FILE_NAME server )

# If this is a shared lib
set(SHARED_LIB 1)

# If this is a static lib
set(STATIC_LIB 0)

# Include this to handle all the defines
include(${CMAKESCRIPTS_DIR}/library-base.cmake)

# Links dirs to search for link libs in
set(LINK_DIRS 			)
set(WINDOWS_LINK_DIRS	)
set(POSIX_LINK_DIRS		${PUBLIC_LIB}/linux32/ ${COMMON_LIB}/linux32/)
set(WIN32_LINK_DIRS		)
set(WIN64_LINK_DIRS		)
set(POSIX32_LINK_DIRS	)
set(POSIX64_LINK_DIRS	)

# Other static libs we need 
set(WINDOWS_LINK_LIBS tier3.lib tier2.lib choreoobjects.lib dmxloader.lib matsys_controls.lib particles.lib 
	vtf.lib bitmap.lib vgui_controls.lib)

set(WINDOWS_LINK_LIBS
	tier1
	${ROOT}//lib/public/libprotobuf.lib 
	${ROOT}//lib/public/bitmap.lib 
	${ROOT}//lib/public/choreoobjects.lib 
	mathlib
	${ROOT}//lib/public/matsys_controls.lib  
	${ROOT}//lib/public/particles.lib 
	${ROOT}//lib/public/dmxloader.lib 
	${ROOT}//lib/public/tier2.lib 
	${ROOT}//lib/public/tier3.lib 
	${ROOT}//lib/public/vtf.lib 
	${ROOT}//lib/common/libcrypto.lib 
	${ROOT}//lib/public/libz.lib 
	${ROOT}//lib/common/libcurl.lib
	vstdlib 
	steam_api
	tier0)

set(POSIX_LINK_LIBS rt 
	pthread
	dl
	m
	#mathlib
	tier0
	tier1
	${ROOT}//lib/public/linux32/libprotobuf.a
	${ROOT}//lib/public/linux32/bitmap.a 
	${ROOT}//lib/public/linux32/choreoobjects.a 
	mathlib
	${ROOT}//lib/public/linux32/matsys_controls.a 
	${ROOT}//lib/public/linux32/particles.a 
	${ROOT}//lib/public/linux32/dmxloader.a
	tier1
	${ROOT}//lib/public/linux32/tier2.a 
	${ROOT}//lib/public/linux32/tier3.a 
	${ROOT}//lib/public/linux32/vtf.a 
	${ROOT}//lib/common/linux32/libcrypto.a
	${ROOT}//lib/public/linux32/libz.a
	${ROOT}//lib/common/linux32/libcurl.a
	${ROOT}//lib/common/linux32/libcurlssl.a
	${ROOT}//lib/common/linux32/libssl.a
	tier0
	vstdlib 
	#SDL2 
	steam_api
	mathlib
	tier0)

if(DEFINED WINDOWS)
	target_link_libraries(server ${WINDOWS_LINK_LIBS})
endif(DEFINED WINDOWS)

if(DEFINED POSIX)
	target_link_libraries(server ${POSIX_LINK_LIBS})
endif(DEFINED POSIX)
